done with 3 steps of analysis

--- a/ex-06.ipynb
+++ b/ex-06.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {
     "vscode": {
      "languageId": "yaml"
@@ -236,15 +236,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "## Assignment:\n",
     "- Implement the missing parts of the code: the decisionplot function and AUC-ROC calculation.\n",
-    "\n",
+    " *It is done in the above code chunk*\n",
     "- Discuss the results among your peers. Consider the following:\n",
     "\n",
     "    - Which metric is most informative for this problem and why?\n",
+    "    *From the above codes we can find the ROC-AUC as more informativeas it measures the potential of the model to find the variation between positive and negative classes across different thresholds. It's useful for evaluating the model's overall performance, especially when you're interested in the model's ability to rank instances correctly.*\n",
     "\n",
     "    - How does the decision boundary visualization help in understanding the model’s performance?\n",
     "\n",
