done with 3 step analysis

--- a/ex-06.ipynb
+++ b/ex-06.ipynb
@@ -16,7 +16,7 @@
     "      embed-resources: true\n",
     "  toc: true\n",
     "  jupyter: python3\n",
-    "  ---"
+    "---"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "    It's useful for evaluating the model's overall performance, especially when you're interested in the model's ability to rank instances correctly.*\n",
     "\n",
     "    - How does the decision boundary visualization help in understanding the model’s performance?\n",
-    "    The decision boundary visualization helps in understanding whether the model is underfit or overfitting the data, \n",
+    "    The decision boundary visualization helps in understanding whether the model is underfit or overfitting the data, and finding the patterns\n",
     "\n",
     "    - Reflect on the impact of PCA on model performance and decision boundary.\n",
     "\n"
