Commit in the Assignment report changes

--- a/ex-06.ipynb
+++ b/ex-06.ipynb
@@ -238,6 +238,7 @@
     "    The decision boundary visualization helps in understanding whether the model is underfit or overfitting the data, and finding the patterns\n",
     "\n",
     "    - Reflect on the impact of PCA on model performance and decision boundary.\n",
+    "    Anyways both the methods play a vital role in the analysis like the principal component analysis helps in dimensionality reduduction whereas the decision boundary helps in analysing the model ex, finding the patterns, features and in balancing the dataset.\n",
     "\n"
    ]
   }
